--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "serve": "live-server public",
-    "build:prod": "webpack",
+    "build:prod": "webpack -p --env production",
     "build:dev": "webpack-dev-server",
     "test": "jest --config=jest.config.json"
   },
@@ -20,6 +20,7 @@
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
     "jest": "20.0.4",
+    "live-server": "^1.2.1",
     "moment": "2.18.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
