add server scripts to heroku

--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "serve": "live-server public",
     "build:prod": "webpack -p --env production",
     "build:dev": "webpack-dev-server",
-    "test": "jest --config=jest.config.json"
+    "test": "jest --config=jest.config.json",
+    "start": "node server/server.js",
+    "heroku-postbuild":"yarn run build:prod"
   },
   "dependencies": {
     "babel-core": "6.25.0",
@@ -19,6 +21,7 @@
     "enzyme": "3.0.0",
     "enzyme-adapter-react-16": "1.0.0",
     "enzyme-to-json": "3.0.1",
+    "express": "4.15.4",
     "jest": "20.0.4",
     "live-server": "^1.2.1",
     "moment": "2.18.1",
