--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "serve": "live-server public",
     "build:prod": "webpack -p --env production",
     "build:dev": "webpack-dev-server",
     "test": "jest --config=jest.config.json",
     "start": "node server/server.js",
-    "heroku-postbuild":"yarn run build:prod"
+    "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
     "babel-core": "6.25.0",
@@ -18,12 +17,7 @@
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
     "css-loader": "^4.3.0",
-    "enzyme": "3.0.0",
-    "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1",
     "express": "4.15.4",
-    "jest": "20.0.4",
-    "live-server": "^1.2.1",
     "moment": "2.18.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
@@ -34,13 +28,19 @@
     "react-dom": "16.0.0",
     "react-redux": "5.0.5",
     "react-router-dom": "^5.2.0",
-    "react-test-renderer": "^16.14.0",
     "redux": "^4.0.5",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.3.0",
     "uuid": "^8.3.1",
-    "webpack": "^4.44.2",
+    "webpack": "^4.44.2"
+  },
+  "devDependencies": {
     "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-dev-server": "^3.11.0",
+    "react-test-renderer": "^16.14.0",
+    "enzyme": "3.0.0",
+    "jest": "20.0.4",
+    "enzyme-adapter-react-16": "1.0.0",
+    "enzyme-to-json": "3.0.1"
   }
 }
