--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "moment": "2.18.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
+    "numeral": "^2.0.6",
     "raf": "3.3.2",
     "react": "16.0.0",
     "react-addons-shallow-compare": "15.6.0",
@@ -35,12 +36,12 @@
     "webpack": "^4.44.2"
   },
   "devDependencies": {
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0",
-    "react-test-renderer": "^16.14.0",
     "enzyme": "3.0.0",
-    "jest": "20.0.4",
     "enzyme-adapter-react-16": "1.0.0",
-    "enzyme-to-json": "3.0.1"
+    "enzyme-to-json": "3.0.1",
+    "jest": "20.0.4",
+    "react-test-renderer": "^16.14.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
