--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "build:prod": "webpack -p --env production",
     "build:dev": "webpack-dev-server",
-    "test": "jest --config=jest.config.json",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
     "start": "node server/server.js",
     "heroku-postbuild": "yarn run build:prod"
   },
@@ -16,8 +16,11 @@
     "babel-plugin-transform-object-rest-spread": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
+    "cross-env": "^7.0.2",
     "css-loader": "^4.3.0",
+    "dotenv": "^8.2.0",
     "express": "4.15.4",
+    "firebase": "^7.24.0",
     "moment": "2.18.1",
     "node-sass": "^4.14.1",
     "normalize.css": "^8.0.1",
@@ -30,6 +33,8 @@
     "react-redux": "5.0.5",
     "react-router-dom": "^5.2.0",
     "redux": "^4.0.5",
+    "redux-mock-store": "^1.5.4",
+    "redux-thunk": "^2.3.0",
     "sass-loader": "^10.0.2",
     "style-loader": "^1.3.0",
     "uuid": "^8.3.1",
